fixed test due to removal of LinkedList/Vector/Stack